{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "6749d125-ed40-4c45-bd92-f06754069e31",
            "actions": [
                {
                    "name": "Special",
                    "type": "Button",
                    "id": "1bfb0307-8242-4326-a212-4650ffa7dcae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d4e6a727-e676-4307-9984-8d8e89e23540",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Punch",
                    "type": "Button",
                    "id": "5a1e1b5c-638a-4be2-8392-65653c9bd1f7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Value",
                    "id": "1231409c-9f1f-4746-89e1-0ed03747f9e6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8c8dedad-8c21-48ae-bc41-04c59d9a24dd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SidePunch",
                    "type": "Value",
                    "id": "784f429f-e9a0-4bfc-8ee3-f139141a2fcf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpPunch",
                    "type": "Value",
                    "id": "44348dff-81f2-4214-910f-14624752edaf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DownPunch",
                    "type": "Value",
                    "id": "0ccb1e48-07c8-4180-a62f-3d1be1813e24",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpTaunt",
                    "type": "Button",
                    "id": "7ea26e15-3421-4df9-acf9-2df1e15d9a4a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DownTaunt",
                    "type": "Button",
                    "id": "2e3bf8b7-4d53-41f1-a8dc-ab8331ed3da8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SideTaunt",
                    "type": "Button",
                    "id": "757e6303-01a4-411f-b1f2-807f4abe9f94",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shield",
                    "type": "Button",
                    "id": "79640b67-f532-4e0e-8666-b1be50907724",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dodge",
                    "type": "Value",
                    "id": "e232da74-b8a7-4e88-b852-4f6376a6b42e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "772c7ba1-e893-44d7-95bf-3146f39b33f8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Special",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b29d511a-ff2c-4aff-89a1-3ca3331af1ed",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97a7c525-b0bd-445c-bf60-73317c777cc3",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Punch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d14fe00-eb9a-47e0-9047-2856b43c569e",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36890f0a-186a-4327-aeb1-3fb53d7728f6",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34945bb4-4a9b-498b-8717-fb4b013d8728",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fa90bfc-b639-4767-8d84-b15b2bc0a022",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "SidePunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ca596cf-c79b-4f59-bb61-9bbd52e6f041",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "UpPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da953c79-f18e-4605-9a41-87b315d47d7b",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "DownPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62a17242-3058-4ce9-9307-a2ab0173f628",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpTaunt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1837d035-ab15-4a19-9cc9-93afbaaf555d",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownTaunt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76890542-b0e3-4e58-9bc6-1284641eaf0c",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideTaunt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96966018-ac7d-4f3c-98ad-910c20094c8b",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideTaunt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0212e329-9b57-4f70-9e23-4f69d4bc897a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Shield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button With One Modifier",
                    "id": "961ecb84-3233-47cc-9e32-f4547f3801da",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "54c5618f-5d4b-41d1-ac8a-3dcc6158ea87",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "260dfd3e-ba99-4773-a4cd-2b99af922d94",
                    "path": "<Gamepad>/dpad/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}